docs/v2.0.7/_sources/gallery/sellmeier/index.rst.txt
:orphan:

Examples: Sellmeier Material
============================

This folder contains examples that demonstrate how to use the `SellmeierMaterial` class from the PyOptik library. These examples illustrate the practical applications of modeling materials using the Sellmeier equation, which is commonly used in optical design to determine the refractive index of various materials.

Contents
--------

- **Basic Sellmeier Calculation**: Shows how to instantiate the `SellmeierMaterial` class and calculate the refractive index for different wavelengths.
- **Plotting Refractive Index**: Demonstrates how to visualize the refractive index as a function of wavelength using the `plot` method.
- **Application Example**: Provides an example of how to use the Sellmeier model in a more advanced optical simulation or analysis.

Usage
-----

To run these examples, make sure you have installed all required dependencies as outlined in the main `PyOptik` README. Navigate to this folder and execute the Python scripts as follows:



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This module demonstrates the usage of the PyOptik library to calculate and plot the refractive ...">

.. only:: html

  .. image:: /gallery/sellmeier/images/thumb/sphx_glr_plot_bk7_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_sellmeier_plot_bk7.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot the Refractive Index of Optical Material: BK7</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example compares two common optical glasses available in MaterialBank. It computes and plo...">

.. only:: html

  .. image:: /gallery/sellmeier/images/thumb/sphx_glr_plot_compare_glasses_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_sellmeier_plot_compare_glasses.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare the Refractive Index of BK7 and Fused Silica</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This module demonstrates the usage of the PyOptik library to calculate and plot the refractive ...">

.. only:: html

  .. image:: /gallery/sellmeier/images/thumb/sphx_glr_plot_silica_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_sellmeier_plot_silica.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot the Refractive Index of Optical Material: Silica</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This module demonstrates the usage of the PyOptik library to calculate and plot the refractive ...">

.. only:: html

  .. image:: /gallery/sellmeier/images/thumb/sphx_glr_plot_water_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_sellmeier_plot_water.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot the Refractive Index of Optical Material: Water</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/sellmeier/plot_bk7
   /gallery/sellmeier/plot_compare_glasses
   /gallery/sellmeier/plot_silica
   /gallery/sellmeier/plot_water



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
